# ollama-rpg2

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  content.py  lore.py  main.py  mapgen.py
app/static/: app.js  index.html  styles.css
assets/unicode/: emoji-ordering-tidy.txt  emoji-rpg.txt
scripts/: jsonl_to_pretty_json.py
tests/: test_browser_ui.py  test_map_api.py
