[project]
name = "ollama-rpg2"
version = "0.1.0"
description = "FastAPI-powered emoji RPG prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "playwright>=1.58,<2.0",
    "pytest>=8.4,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
